--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 Click==7.0
 eventbrite==3.3.3
 Flask==1.0.2
+Flask-JWT-Extended==3.16.0
 Flask-RESTful==0.3.7
 Flask-WTF==0.14.2
 identify==1.2.0
@@ -18,6 +19,8 @@ MarkupSafe==1.1.0
 mongoengine==0.16.3
 nodeenv==1.3.3
 pre-commit==1.14.2
+pycrypto==2.6.1
+PyJWT==1.4.2
 pymongo==3.7.2
 pytz==2018.9
 PyYAML==3.13
